# voice_assistent_project

./: README.md  assist.py  functions.py  phrases.py  pyproject.toml  voice.py
